deployment/platform-frontend-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.13.0 (84fa826)
  creationTimestamp: null
  labels:
    io.kompose.service: platform-frontend
  name: platform-frontend
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: platform-frontend
    spec:
      containers:
      - image: platform-frontend-nginx
        name: platform-frontend-nginx
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
