deployment/platform-frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: platform-frontend-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.global-static-ip-name: platform-alpha-frontend-ip
spec:
  tls:
  - hosts:
    - platform-alpha.decent.bet
    secretName: slots-frontend-cert-tls
  rules:
  - host: platform-alpha.decent.bet
    http:
     paths:
     - backend:
         serviceName: platform-frontend
         servicePort: 80
